<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:background="@color/black"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.fragment.document.check_document.CheckDocumentFragment"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/txt_choose"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textStyle="bold"
        android:textSize="24sp"
        android:textColor="@color/gold"
        android:text="@string/choose_docu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/txt_dosudebnoe"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/txt_choose"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="16sp"
        android:textColor="@color/gold"
        android:textStyle="bold"
        android:text="@string/dosudebnoe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>



    <TextView
        android:id="@+id/txt_rastarjenie"
        android:textStyle="bold"
        android:textColor="@color/gold"
        android:textSize="16sp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/txt_dosudebnoe"
        app:layout_constraintStart_toStartOf="@id/txt_dosudebnoe"
        android:text="@string/rastarjenie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


    <TextView
        android:id="@+id/txt_obrashenie"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/txt_rastarjenie"
        app:layout_constraintStart_toStartOf="@id/txt_dosudebnoe"
        android:textSize="16sp"
        android:textColor="@color/gold"
        android:textStyle="bold"
        android:text="@string/obrashenie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>