<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragment.setting.SettingFragment">

    <TextView
        android:id="@+id/txt_register"
        android:layout_margin="40dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="32sp"
        android:textStyle="bold"
        android:textColor="@color/gold"
        android:text="@string/settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_margin="20dp"
        android:background="@drawable/gold_bc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.2"
        app:layout_constraintTop_toBottomOf="@id/txt_register"
        android:layout_width="match_parent"
        android:padding="20dp"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txt_language"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:text="@string/language"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/txt_help"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@id/txt_language"
            app:layout_constraintStart_toStartOf="@id/txt_language"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:text="@string/support"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/txt_out_acc"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@id/txt_help"
            app:layout_constraintStart_toStartOf="@id/txt_language"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="@string/out_of_acc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>