<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/black"
    tools:context=".ui.fragment.inter.InterFragment">

    <TextView
        android:id="@+id/txt_register"
        android:layout_margin="40dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="32sp"
        android:textStyle="bold"
        android:textColor="@color/gold"
        android:text="@string/code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_margin="20dp"
        android:background="@drawable/gold_bc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.2"
        app:layout_constraintTop_toBottomOf="@id/txt_register"
        android:layout_width="match_parent"
        android:padding="20dp"
        android:layout_height="wrap_content">

        <TextView
            android:textStyle="bold"
            android:textColor="#2E2D2C"
            android:id="@+id/txt_sms"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/sms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="12dp"
            android:id="@+id/ed_code"
            android:background="@drawable/bg_edit"
            app:endIconMode="clear_text"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintTop_toBottomOf="@id/txt_sms"
            android:hint="@string/code"
            android:textColorHint="#40DBBA7B"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_email_id"
                android:textColor="@color/gold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="12dp"
            android:textStyle="bold"
            android:textColor="#2E2D2C"
            app:layout_constraintTop_toBottomOf="@id/ed_code"
            android:text="@string/sms_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_register"
        app:layout_constraintStart_toStartOf="@id/container"
        app:layout_constraintEnd_toEndOf="@id/container"
        app:layout_constraintTop_toBottomOf="@id/container"
        android:textStyle="bold"
        android:textColor="@color/gold"
        android:textAllCaps="false"
        android:layout_marginTop="40dp"
        app:cornerRadius="16dp"
        android:paddingVertical="16dp"
        android:text="@string/next"
        android:gravity="center"
        android:backgroundTint="#2E2D2C"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>


    <TextView
        android:id="@+id/txt_if"
        android:textStyle="bold"
        android:textColor="@color/gold"
        app:layout_constraintBottom_toTopOf="@id/btn_register"
        app:layout_constraintStart_toStartOf="@id/btn_register"
        android:text="@string/if_sms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/txt_timer"
        android:layout_marginStart="4dp"
        app:layout_constraintBottom_toBottomOf="@id/txt_if"
        app:layout_constraintTop_toTopOf="@id/txt_if"
        app:layout_constraintStart_toEndOf="@id/txt_if"
        android:textColor="@color/gold"
        android:text="2:00"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>




</androidx.constraintlayout.widget.ConstraintLayout>