<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:background="@color/black"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.main.MainFragment"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <include layout="@layout/part_result"/>

        <TextView
            android:layout_marginStart="24dp"
            android:id="@+id/txt_main"
            android:layout_marginTop="40dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:textSize="32sp"
            android:textStyle="bold"
            android:textColor="@color/gold"
            android:text="@string/main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_marginStart="12dp"
            android:id="@+id/txt_lawyers"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@id/txt_main"
            app:layout_constraintStart_toStartOf="parent"
            android:textStyle="bold"
            android:textColor="@color/gold"
            android:textSize="20sp"
            android:text="@string/lawyers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


        <TextView
            android:layout_marginEnd="20dp"
            android:layout_marginStart="12dp"
            android:id="@+id/txt_lwyers_all"
            app:layout_constraintBottom_toBottomOf="@id/txt_lawyers"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/txt_lawyers"
            android:textStyle="bold"
            android:textColor="@color/gold"
            android:textSize="16sp"
            android:text="@string/all_lawyers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_lawyers"
            android:layout_marginTop="12dp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintTop_toBottomOf="@id/txt_lawyers"
            app:layout_constraintStart_toStartOf="@id/txt_lawyers"
            android:layout_width="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            tools:listitem="@layout/item_lawyers"
            android:layout_height="wrap_content"/>

    <TextView
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="@id/rv_lawyers"
        app:layout_constraintTop_toBottomOf="@id/rv_lawyers"
        android:id="@+id/txt_services"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/gold"
        android:text="@string/services"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_services"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_services"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>


        <TextView
            app:layout_constraintTop_toBottomOf="@id/rv_services"
            android:id="@+id/txt_programmers"
            android:layout_marginTop="12dp"
            android:textColor="@color/gold"
            android:textStyle="bold"
            android:textSize="20sp"
            android:text="@string/programmers"
            app:layout_constraintStart_toStartOf="@id/rv_lawyers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_marginBottom="20dp"
            android:layout_marginTop="12dp"
            android:paddingBottom="12dp"
            android:layout_marginHorizontal="20dp"
            android:background="@drawable/bg_item"
            app:layout_constraintTop_toBottomOf="@id/txt_programmers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txt_askat_name"
                android:layout_margin="12dp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/c_Askat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/txt_askat_number"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_marginEnd="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/txt_askat_name"
                app:layout_constraintTop_toTopOf="@id/txt_askat_name"
                android:text="+996 702 03 06 07"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_marginTop="12dp"
                android:id="@+id/txt_urmat_name"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:text="@string/urmat"
                app:layout_constraintTop_toBottomOf="@id/txt_askat_name"
                app:layout_constraintStart_toStartOf="@id/txt_askat_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>


            <TextView
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="16sp"
                android:text="+996 775 23 23 50"
                android:layout_marginEnd="12dp"
                app:layout_constraintBottom_toBottomOf="@id/txt_urmat_name"
                app:layout_constraintTop_toTopOf="@id/txt_urmat_name"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>