<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:background="@color/black"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.details.DetailsFragment"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <TextView
        android:id="@+id/txt_lawyer"
        android:layout_margin="40dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/gold"
        android:textStyle="bold"
        android:textSize="32sp"
        android:text="@string/lawyer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


    <ImageView
        android:scaleType="centerCrop"
        android:id="@+id/img_lawyer"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/txt_lawyer"
        app:layout_constraintStart_toStartOf="@id/txt_lawyer"
        android:src="@drawable/google"
        android:layout_width="80dp"
        android:layout_height="80dp"/>


    <TextView
        android:layout_marginEnd="20dp"
        android:id="@+id/txt_lawyer_name"
        android:layout_marginStart="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/img_lawyer"
        app:layout_constraintTop_toTopOf="@id/img_lawyer"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/gold"
        android:text="Asanaliev Urmat"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>


    <TextView
        android:id="@+id/txt_1"
        android:layout_marginTop="40dp"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/gold"
        android:text="@string/work_experience"
        app:layout_constraintTop_toBottomOf="@id/img_lawyer"
        app:layout_constraintStart_toStartOf="@id/img_lawyer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_marginStart="20dp"
        android:id="@+id/txt_work_experiences"
        android:textColor="@color/gold"
        android:textStyle="bold"
        android:textSize="24sp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/txt_1"
        app:layout_constraintStart_toEndOf="@id/txt_1"
        app:layout_constraintBottom_toBottomOf="@id/txt_1"
        android:text="16 лет"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>

    <TextView
        app:layout_constraintTop_toBottomOf="@id/txt_1"
        app:layout_constraintStart_toStartOf="@id/txt_1"
        android:id="@+id/txt_2"
        android:layout_marginTop="40dp"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/gold"
        android:text="@string/cpecial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/txt_2"
        app:layout_constraintStart_toStartOf="@id/txt_2"
        android:id="@+id/txt_special"
        android:textColor="@color/gold"
        android:textStyle="bold"
        android:textSize="24sp"
        android:text="Адвокат по международной, уголовному, гражданскому праву, руководитель Юридической компанией «ЮрКосул»"
        android:layout_width="0dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_height="wrap_content"/>



    <com.google.android.material.button.MaterialButton
        android:textAllCaps="false"
        android:id="@+id/btn_to_contact"
        android:layout_margin="40dp"
        android:backgroundTint="@color/gold"
        android:text="@string/call"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>



</androidx.constraintlayout.widget.ConstraintLayout>